--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Land</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <header>
@@ -338,6 +339,7 @@
                 </div>
             </div>
         </section>
+        <!--Testimonial-->
         <section id="testimonial">
             <div>
                 <header>Testimonials</header>
