mejorando menú de navegación

--- a/index.html
+++ b/index.html
@@ -16,29 +16,21 @@
                     </h1>
                 </div>
                 <nav>
-                    <label for="">Menu</label>
-                    <input type="checkbox">
-                    <ul class="menu">
-                        <li><a href="">Home</a></li>
-                        <li><a>Find a Property</a></li>
-                        <li>
-                            <!--First tier Drop Down-->
-                            <label for=""> Pages 
-                                <span aria-hidden="true"></span>
-                            </label>
-                            <a href="#"> Pages
-                                <span aria-hidden="true"></span>
-                            </a>
-                            <input type="checkbox">
-                            <ul>
-                                <li><a href="#about">About Us </a></li>
-                                <li><a href="#services">Services </a></li>
-                                <li><a href="#gallery">Gallery </a></li>
+                    <ul class="main-menu">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Find a Property</a></li>
+                        <li class="dropdown">
+                            <a href="#">Pages</a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#about">About Us</a></li>
+                                <li><a href="#services">Services</a></li>
+                                <li><a href="#gallery">Gallery</a></li>
                             </ul>
                         </li>
                         <li><a href="#blog">Blog</a></li>
-                            <li><a href="#contact">Contact Us </a></li>
-                            <li><a href="#login.html">Login</a></li>
+                        <li><a href="#contact">Contact Us</a></li>
+                        <li><a href="login.html">Login</a></li>
+                        <li><a href="register.html">Register</a></li>
                     </ul>
                 </nav>
             </div>
