Apply flexbox and position section home

--- a/index.html
+++ b/index.html
@@ -42,58 +42,59 @@
         <section id="home">
             <div class="container">
                 <header>
-                        <h1>Search and Find Your <span>Luxury</span> Homes </h1>
-                        <p>Property for sale & for rent around the world</p>
+                    <h1>Search and Find Your <span>Luxury</span> Homes </h1>
+                    <p>Property for sale & for rent around the world</p>
                 </header>
                 <!--Formulario de busqueda -->
                 <section>
-                    <h2>Search Form</h2>
                     <form action="#" method="post">
+                        <!-- Contenedor de las columnas -->
                         <div>
-                            <!--Selecciones de la columna izquierda-->
+                            <!-- Primera columna -->
                             <div>
                                 <article>
-                                    <label for="status-select">Status</label>
-                                    <select id="status-select" required>
-                                        <option value="">Any Status</option>
-                                        <option value="1">For Rent</option>
-                                        <option value="2">For Sale</option>
-                                    </select>
+                                <label for="status-select">Status</label>
+                                <select id="status-select" required>
+                                    <option value="" >Any Status</option>
+                                    <option value="1">For Rent</option>
+                                    <option value="2">For Sale</option>
+                                </select>
                                 </article>
                                 <article>
-                                    <label for="type-select-select">Status</label>
-                                    <select id="type-select" required>
-                                        <option value="">All Type</option>
-                                        <option value="1">Apartments</option>
-                                        <option value="2">Restaurant</option>
-                                        <option value="3">Shop</option>
-                                        <option value="4">Villa</option>
-                                    </select>
+                                <label for="type-select">All Type</label>
+                                <select id="type-select" required>
+                                    <option value="">All Type</option>
+                                    <option value="1">Apartments</option>
+                                    <option value="2">Restaurant</option>
+                                    <option value="3">Shop</option>
+                                    <option value="4">Villa</option>
+                                </select>
                                 </article>
                             </div>
-                            <!--Selecciones de la columna derecha-->
+                            <!-- Segunda columna -->
                             <div>
                                 <article>
-                                    <label for="bedrooms-select">Bredrooms</label>
-                                    <select id="bedrooms-select" required>
-                                        <option value="">Bedrooms</option>
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                        <option value="4">4</option>
-                                    </select>
+                                <label for="bedrooms-select">Bedrooms</label>
+                                <select id="bedrooms-select" required>
+                                    <option value="">Bedrooms</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                </select>
                                 </article>
                                 <article>
-                                    <label for="location-select">Bredrooms</label>
-                                    <select id="location-select" required>
-                                        <option value="">Location</option>
-                                        <option value="1">United States</option>
-                                        <option value="2">Canada</option>
-                                        <option value="3">Paris</option>
-                                    </select>
+                                <label for="location-select">Location</label>
+                                <select id="location-select" required>
+                                    <option value="">Location</option>
+                                    <option value="1">United States</option>
+                                    <option value="2">Canada</option>
+                                    <option value="3">Paris</option>
+                                </select>
                                 </article>
                             </div>
                         </div>
+                        <!-- Botón debajo -->
                         <button type="submit">Find Here</button>
                     </form>
                 </section>
