including services section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Land</title>
     <link rel="stylesheet" href="main.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+
 </head>
 <body>
     <header>
@@ -101,15 +103,15 @@
             </div>
         </section>
 
-        <!-- welcome banner-->
-        <section>
-            <div class="container">
-                <!--left section -->
+        <!-- welcome banner -->
+        <section class="home_section">
+            <div class="container_home">
+                <!-- Left Section -->
                 <article class="banner-left">
                     <figure>
-                        <img src="" alt="" class="img-responsive">
-                        <figcaption>
-                            <h3>In <span>House</span></h3>
+                        <img src="./images/welcome.jpg" alt="Living Room" class="img-responsive">
+                        <figcaption class="banner-caption">
+                            <h3>L <span>and</span></h3>
                             <div class="banner-figure">
                                 <p>Ut ac gravida quam id ornare</p>
                                 <p>Nullam imperd scelerisque ullamcorper</p>
@@ -118,111 +120,103 @@
                         </figcaption>
                     </figure>
                 </article>
-                <!--right section-->
-                <article>
-                    <h2><span>Welcome to our</span>Land site</h2>
-                    <h3 class="title-sub mb-4">The best place to find the 
-                        <span>house you want.</span>
-                    </h3>
-                    <p>Donec consequat sapien ut leo cursus rhoncus. Nullam dui mi, vulputate ac metus
-                        at, semper
-                        varius orci. Nulla accumsan ac elit in congue. Class aptent taciti sociosqu ad litora torquent
-                        per conubia.
-                    </p>
-                    <p>Donec consequat sapien ut leo cursus rhoncus. Nullam dui
-                        mi, vulputate ac metus
-                        at, semper varius orci. Nulla accumsan ac elit in congue. Class aptent taciti sociosqu ad
-                        litora torquent per.
-                    </p>
+                <!-- Right Section -->
+                <article class="banner-right">
+                    <h2><span>Welcome to our</span> Land site</h2>
+                    <h3>The best place to find the <span>house you want.</span></h3>
+                    <p>Donec condimentum facilisis tincidunt. Etiam sodales lorem quis ligula volutpat, nec hendrerit lorem pellentesque. Quisque dictum risus in vestibulum bibendum. Mauris varius vulputate rutrum. In vitae velit eget risus ullamcorper rutrum id at felis. Nullam imperdiet.</p>
+                    <p>Aenean finibus euismod tincidunt. Praesent pellentesque neque feugiat augue venenatis pellentesque.</p>
                 </article>
             </div>
         </section>
+
         <!--Services Banner-->
-        <section>
-            <div>
-                <header>
-                    <h2>We Provide The <span>Best Services</span></h2>
-                    <p>Excepteur sint occaecat cupidatat</p>
-                </header>
-                <div>
-                    <article>
-                        <div class="icon-container">
-                            <i>🏠</i>
-                        </div>
-                        <h4>Service 1</h4>
-                        <p>Itaque earum rerum hic tenetur asap iente delectus rulla accumsan.</p>
-                        <a href="#">Read More <span>→</span></a>
-                    </article>
-                    <article>
-                        <div class="icon-container">
-                            <i>🏢</i>
-                        </div>
-                        <h4>Service 2</h4>
-                        <p>Itaque earum rerum hic tenetur asap iente delectus rulla accumsan.</p>
-                        <a href="#">Read More <span>→</span></a>
-                    </article>
-                    <article>
-                        <div class="icon-container">
-                            <i>🏛️</i>
-                        </div>
-                        <h4>Service 2</h4>
-                        <p>Itaque earum rerum hic tenetur asap iente delectus rulla accumsan.</p>
-                        <a href="#">Read More <span>→</span></a>
-                    </article>
-                </div>
+        <section class="services-section">
+            <header>
+                <h2>We Provide The <span>Best Services</span></h2>
+                <p>Excepteur sint occaecat cupidatat</p>
+            </header>
+
+
+            <div class="services-container">
+
+                <article class="service-card">
+                    <div class="icon-container">
+                        <i class="fas fa-home"></i>
+                    </div>
+                    <h4>Service 1</h4>
+                    <p>Itaque earum rerum hic tenetur asap iente delectus rulla accumsan.</p>
+                    <a href="#" class="read-more">Read More <span>→</span></a>
+                </article>
+
+                <article class="service-card">
+                    <div class="icon-container">
+                        <i class="fa fa-building ser-icon"></i>
+                    </div>
+                    <h4>Service 2</h4>
+                    <p>Itaque earum rerum hic tenetur asap iente delectus rulla accumsan.</p>
+                    <a href="#" class="read-more">Read More <span>→</span></a>
+                </article>
+
+                <article class="service-card">
+                    <div class="icon-container">
+                        <i class="fa fa-university ser-icon"></i>
+                    </div>
+                    <h4>Service 3</h4>
+                    <p>Itaque earum rerum hic tenetur asap iente delectus rulla accumsan.</p>
+                    <a href="#" class="read-more">Read More <span>→</span></a>
+                </article>
             </div>
         </section>
+
         <!--Places-->
-        <section>
-            <div>
-                <header>
-                    <h2>Most Popular <span>Places</span></h2>
-                    <p>Excepteur sint occaecat cupidatat</p>
-                </header>
-                <div>
-                    <section>
-                        <article>
-                            <figure>
-                                <div>
-                                    <figcaption>
-                                        <h4>Place</h4>
-                                        <p>Canada</p>
-                                    </figcaption>
-                                </div>
-                            </figure>
-                        </article>
-                        <article>
-                            <figure>
-                                <div>
-                                    <h4>Place 2</h4>
-                                    <p>New York City</p>
-                                </div>
-                            </figure>
-                        </article>
-                        <article>
-                            <figure>
-                                <div>
-                                    <figcaption>
-                                        <h4>Place 3</h4>
-                                        <p>United States</p>
-                                    </figcaption>
-                                </div>
-                            </figure>
-                        </article>
-                        <article>
-                            <figure>
-                                <div>
-                                    <figcaption>
-                                        <h4>Place 4</h4>
-                                        <p>Paris</p>
-                                    </figcaption>
-                                </div>
-                            </figure>
-                        </article>
-                    </section>
+        <section class="popular-places">
+            <header>
+              <h2>
+                Most Popular <span>Places</span>
+              </h2>
+              <p>Excepteur sint occaecat cupidatat</p>
+            </header>
+            <div class="places-container">
+              <div class="place-card">
+                <div class="image-container">
+                  <img src="./images/place1.jpg" alt="Place 1">
                 </div>
+                <div class="place-info">
+                  <h3>Place 1</h3>
+                  <p>Canada</p>
+                </div>
+              </div>
+              <div class="place-card">
+                <div class="image-container">
+                  <img src="./images/place2.jpg" alt="Place 2">
+                </div>
+                <div class="place-info">
+                  <h3>Place 2</h3>
+                  <p>New York City</p>
+                </div>
+              </div>
+              <div class="place-card">
+                <div class="image-container">
+                  <img src="./images/place3.jpg" alt="Place 3">
+                </div>
+                <div class="place-info">
+                  <h3>Place 3</h3>
+                  <p>United States</p>
+                </div>
+              </div>
+              <div class="place-card">
+                <div class="image-container">
+                  <img src="./images/place4.jpg" alt="Place 4">
+                </div>
+                <div class="place-info">
+                  <h3>Place 4</h3>
+                  <p>Paris</p>
+                </div>
+              </div>
             </div>
-        </section>
+          </section>
+          
         <!--Facts-->
         <section id="facts">
             <div>
