Includes flexbox/position sections for places and statistics

--- a/index.html
+++ b/index.html
@@ -170,83 +170,73 @@
         </section>
 
         <!--Places-->
-        <section class="popular-places">
-            <header>
-              <h2>
-                Most Popular <span>Places</span>
-              </h2>
-              <p>Excepteur sint occaecat cupidatat</p>
-            </header>
+        <section class="places-section">
+            <h2>Most Popular <span>Places</span></h2>
+            <p>Exceptetur sint occaecat cupidatat</p>
             <div class="places-container">
-              <div class="place-card">
-                <div class="image-container">
-                  <img src="./images/place1.jpg" alt="Place 1">
+                <div class="place-card">
+                    <div class="image-container">
+                        <img src="./images/canada.jpg" alt="Place 1">
+                    </div>
+                    <div class="place-content">
+                        <h4>Place 1</h4>
+                        <p>Canada</p>
+                    </div>
                 </div>
-                <div class="place-info">
-                  <h3>Place 1</h3>
-                  <p>Canada</p>
+                <div class="place-card">
+                    <div class="image-container">
+                        <img src="./images/New_York_City-scaled.jpg" alt="Place 2">
+                    </div>
+                    <div class="place-content">
+                        <h4>Place 2</h4>
+                        <p>New York City</p>
+                    </div>
                 </div>
-              </div>
-              <div class="place-card">
-                <div class="image-container">
-                  <img src="./images/place2.jpg" alt="Place 2">
+                <div class="place-card">
+                    <div class="image-container">
+                        <img src="./images/Amsterdam.jpg" alt="Place 3">
+                    </div>
+                    <div class="place-content">
+                        <h4>Place 3</h4>
+                        <p>Amsterdam</p>
+                    </div>
                 </div>
-                <div class="place-info">
-                  <h3>Place 2</h3>
-                  <p>New York City</p>
-                </div>
-              </div>
-              <div class="place-card">
-                <div class="image-container">
-                  <img src="./images/place3.jpg" alt="Place 3">
-                </div>
-                <div class="place-info">
-                  <h3>Place 3</h3>
-                  <p>United States</p>
-                </div>
-              </div>
-              <div class="place-card">
-                <div class="image-container">
-                  <img src="./images/place4.jpg" alt="Place 4">
-                </div>
-                <div class="place-info">
-                  <h3>Place 4</h3>
-                  <p>Paris</p>
-                </div>
-              </div>
-            </div>
-          </section>
-          
-        <!--Facts-->
-        <section id="facts">
-            <div>
-                <div>
-                    <header>
-                        <h2>Some statistical Facts</h2>
-                    </header>
-                    <article>
-                        <div>
-                            <section>
-                                <p>1680</p>
-                                <p>Profesional Agents</p>
-                            </section>
-                            <section>
-                                <p>1200</p>
-                                <p>Property Lcoation</p>
-                            </section>
-                            <section>
-                                <p>400</p>
-                                <p>Awards Won</p>
-                            </section>
-                        </div>
-                    </article>
+                <div class="place-card">
+                    <div class="image-container">
+                        <img src="./images/Paris1.jpg" alt="Place 4">
+                    </div>
+                    <div class="place-content">
+                        <h4>Place 4</h4>
+                        <p>Paris</p>
+                    </div>
                 </div>
             </div>
-            <figure>
-                <img src="images/img3.png" alt="Statistics Illustration">
-                <figcaption>Ilustration of statistical facts</figcaption>
-            </figure>
         </section>
+        
+        <!--Facts-->
+        <section class="stats-section">
+            <div class="image-container">
+                <img src="./images/img3.png" alt="Mujer con carpeta">
+            </div>
+            <div class="stats-content">
+                <h2>Some Statistical Facts</h2>
+                <div class="stats-numbers">
+                    <div class="stat-item">
+                        <p class="number">1680</p>
+                        <p class="description">Professional Agents</p>
+                    </div>
+                    <div class="stat-item">
+                        <p class="number">200</p>
+                        <p class="description">Property Locations</p>
+                    </div>
+                    <div class="stat-item">
+                        <p class="number">400</p>
+                        <p class="description">Awards Won</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!--blog-->
         <section id="blog">
             <div>
