changing flex-box to grid in section gallery

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                     <h2>Our <span>Gallery</span></h2>
                     <p>Excepteur sint occaecat cupidatat</p>
                 </header>
-                <div class="gallery-row">
+                <div class="gallery-grid">
                     <figure>
                         <a href="#gal1"><img src="images/g1.jpg" alt="Gallery Image 1"></a>
                     </figure>
@@ -307,8 +307,6 @@
                     <figure>
                         <a href="#gal3"><img src="images/g3.jpg" alt="Gallery Image 3"></a>
                     </figure>
-                </div>
-                <div class="gallery-row">
                     <figure>
                         <a href="#gal4"><img src="images/g4.jpg" alt="Gallery Image 4"></a>
                     </figure>
